# rust-grpc-chat

rust-grpc-chat/: Cargo.toml  build.rs  rustfmt.toml
rust-grpc-chat/proto/: chat.proto
rust-grpc-chat/src/: client.rs  server.rs  test.rs
